small fix on safari

--- a/Modul_4/styles.scss
+++ b/Modul_4/styles.scss
@@ -82,7 +82,7 @@ body {
             padding-left: 5%;
 
             @media screen and (min-width: 1400px) {
-                margin: 0 0 4rem 0;
+                margin: 2rem 0 4rem 0;
             }
         }
 
@@ -226,7 +226,6 @@ aside {
         }
 
         .aside-img {
-            width: 100%;
             margin-bottom: 1.5rem;
             padding: 0 5%;
 
